# odms-backend

./: .env.example  .gitignore  checklist.txt  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0568446634d5_add_unique_constrain_for_customer_sync_.py  0ac526384655_add_transform_skip_model.py  281c5874d5ba_make_material_optional_fields_nullable.py  2e367628180c_add_transform_skip_model.py  2ef5d89a1d88_add_updated_at_trigger_for_route_wise_.py  3668bda96db2_add_allow_multiple_device_column.py  4081bcfbb5c6_add_depot_route_user_tables_with_.py  5ced3759d874_update_delivery_info_sap.py  5db2dc911496_add_sync_log_and_customer_sync_reject_.py  65fe88872107_update_string_size_for_reference.py  69c3513345fd_add_all_domain_models_with_relationships.py  9d0ce2bae004_update_string_size_for_user_type.py  b74635d2b24d_add_updated_at_triggers_for_all_tables.py  c643adeb3e5a_add_refresh_token_table.py  cf3223746c33_create_route_wise_depot_table.py  e329a4aa75c2_add_return_reason.py  eca85e95f8fc_make_customer_optional_fields_nullable.py
app/: main.py
app/api/: assignments.py  auth.py  deps.py
app/core/: config.py  logging.py  security.py
app/db/: base.py  mixins.py  session.py
app/models/: attendance.py  conveyance.py  customer.py  customer_sync_reject.py  customer_visit.py  delivery_collection.py  delivery_info_sap.py  delivery_return_item.py  depot.py  material.py  overdue.py  payment.py  refresh_token.py  route.py  (+7 more)
data/: rdl_route_wise_depot.csv  unique_depots.csv  unique_routes.csv
scripts/: seed_routes_depots.py  seed_users.py
(+13 files in other folders)
